--- a/.gitignore
+++ b/.gitignore
@@ -370,3 +370,4 @@ dmypy.json
 .prof
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,pycharm+all,pycharm+iml,python,jupyternotebooks,pydev
+/assets/
